Убран паттерн singleton из некоторых классов, изменён класс для валидации аргументов, изменены тесты.