@@ -1,4 +1,6 @@
+import jakarta.xml.bind.JAXBException;
 import lombok.val;
+import org.apache.commons.io.IOUtils;
 import org.custommonkey.xmlunit.XMLAssert;
 import org.custommonkey.xmlunit.XMLUnit;
 import org.junit.jupiter.api.BeforeEach;
@@ -6,13 +8,12 @@ import org.junit.jupiter.api.Test;
 import org.xml.sax.SAXException;
 import ru.kolodkin.myconverter.converter.JsonToXml;
 
-import java.io.FileOutputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.charset.StandardCharsets;
 
 class JsonToXmlTest {
-    final JsonToXml jsonToXml = new JsonToXml();
+    final private JsonToXml jsonToXml = new JsonToXml();
 
     @BeforeEach
     void initialization() {
@@ -22,28 +23,32 @@ class JsonToXmlTest {
     }
 
     @Test
-    void jsonToXmlNullTest() throws IOException, SAXException {
+    void jsonToXmlNullTest() throws IOException, SAXException, JAXBException {
         try (val fileInputStream = getClass().getResourceAsStream("inputFile/json/inputNull.json");
-             val fileOutputStream = new FileOutputStream("src/test/resources/outputFile/xml/outputNull.xml")) {
-            jsonToXml.convert(fileInputStream, fileOutputStream);
-        }
+             val byteArrayOutputStream = new ByteArrayOutputStream();
+             val expectedFile = getClass().getResourceAsStream("expectedFile/xml/inputNull.xml")) {
 
-        XMLAssert.assertXMLEqual(
-                Files.readString(Path.of("src/test/resources/expectedFile/xml/inputNull.xml")),
-                Files.readString(Path.of("src/test/resources/outputFile/xml/outputNull.xml"))
-        );
+            jsonToXml.convert(fileInputStream, byteArrayOutputStream);
+
+            XMLAssert.assertXMLEqual(
+                    IOUtils.toString(expectedFile,StandardCharsets.UTF_8),
+                    byteArrayOutputStream.toString(StandardCharsets.UTF_8)
+            );
+        }
     }
 
     @Test
-    void jsonToXmlStandardTest() throws IOException, SAXException {
+    void jsonToXmlStandardTest() throws IOException, SAXException, JAXBException {
         try (val fileInputStream = getClass().getResourceAsStream("inputFile/json/input.json");
-             val fileOutputStream = new FileOutputStream("src/test/resources/outputFile/xml/output.xml")) {
-            jsonToXml.convert(fileInputStream, fileOutputStream);
-        }
+             val byteArrayOutputStream = new ByteArrayOutputStream();
+             val expectedFile = getClass().getResourceAsStream("expectedFile/xml/input.xml")) {
 
-        XMLAssert.assertXMLEqual(
-                Files.readString(Path.of("src/test/resources/expectedFile/xml/input.xml")),
-                Files.readString(Path.of("src/test/resources/outputFile/xml/output.xml"))
-        );
+            jsonToXml.convert(fileInputStream, byteArrayOutputStream);
+
+            XMLAssert.assertXMLEqual(
+                    IOUtils.toString(expectedFile, StandardCharsets.UTF_8),
+                    byteArrayOutputStream.toString(StandardCharsets.UTF_8)
+            );
+        }
     }
 }
